Terraform/v1-ec2.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "travel-server" {
    ami = "ami-0440d3b780d96b29d"
    instance_type = "t2.micro"
    key_name = "Terraformkey"
}
